feat: Update server ports and OpenAPI configurations across multiple services